testdata/baselines/reference/submodule/conformance/jsdocTemplateTag5.errors.txt
a.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(8,16): error TS2315: Type 'Object' is not generic.
a.js(9,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
a.js(14,16): error TS2304: Cannot find name 'K'.
a.js(14,16): error TS8010: Type annotations can only be used in TypeScript files.
a.js(15,18): error TS2304: Cannot find name 'V'.
a.js(15,18): error TS8010: Type annotations can only be used in TypeScript files.
a.js(18,21): error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
a.js(28,16): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(29,16): error TS2315: Type 'Object' is not generic.
a.js(30,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
a.js(35,16): error TS2304: Cannot find name 'K'.
a.js(35,16): error TS8010: Type annotations can only be used in TypeScript files.
a.js(36,18): error TS2304: Cannot find name 'V'.
a.js(36,18): error TS8010: Type annotations can only be used in TypeScript files.
a.js(39,21): error TS2339: Property '_map' does not exist on type '{ get: (key: K) => V; }'.
a.js(51,16): error TS2315: Type 'Object' is not generic.
a.js(52,10): error TS2339: Property '_map' does not exist on type '{ Multimap3: { (): void; prototype: { get(key: K): V; }; }; }'.
a.js(57,16): error TS2304: Cannot find name 'K'.
a.js(57,16): error TS8010: Type annotations can only be used in TypeScript files.
a.js(58,18): error TS2304: Cannot find name 'V'.
a.js(58,18): error TS8010: Type annotations can only be used in TypeScript files.
a.js(61,21): error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.


==== a.js (23 errors) ====
    /**
    ~~~
     * Should work for function declarations
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @constructor
    ~~~~~~~~~~~~~~~
     * @template {string} K
    ~~~~~~~~~~~~~~~~~~~~~~~
     * @template V
    ~~~~~~~~~~~~~~
     */
    ~~~
    function Multimap() {
    ~~~~~~~~~~~~~~~~~~~~~
        /** @type {Object<string, V>} TODO: Remove the prototype from the fresh object */
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                   ~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
        this._map = {};
    ~~~~~~~~~~~~~~~~~~~
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    };
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    Multimap.prototype = {
        /**
         * @param {K} key the key ok
                   ~
!!! error TS2304: Cannot find name 'K'.
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @returns {V} the value ok
                     ~
!!! error TS2304: Cannot find name 'V'.
                     ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        get(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
        }
    }
    
    /**
     * Should work for initialisers too
     * @constructor
     * @template {string} K
     * @template V
     */
    var Multimap2 = function() {
                   ~~~~~~~~~~~~~
        /** @type {Object<string, V>} TODO: Remove the prototype from the fresh object */
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                   ~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
        this._map = {};
    ~~~~~~~~~~~~~~~~~~~
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    };
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    Multimap2.prototype = {
        /**
         * @param {K} key the key ok
                   ~
!!! error TS2304: Cannot find name 'K'.
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @returns {V} the value ok
                     ~
!!! error TS2304: Cannot find name 'V'.
                     ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        get: function(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get: (key: K) => V; }'.
        }
    }
    
    var Ns = {};
    /**
     * Should work for expando-namespaced initialisers too
     * @constructor
     * @template {string} K
     * @template V
     */
    Ns.Multimap3 = function() {
        /** @type {Object<string, V>} TODO: Remove the prototype from the fresh object */
                   ~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
        this._map = {};
             ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ Multimap3: { (): void; prototype: { get(key: K): V; }; }; }'.
    };
    
    Ns.Multimap3.prototype = {
        /**
         * @param {K} key the key ok
                   ~
!!! error TS2304: Cannot find name 'K'.
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @returns {V} the value ok
                     ~
!!! error TS2304: Cannot find name 'V'.
                     ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        get(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
        }
    }
    
    